--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL = https://localhost:7241   // תשני לשם שבמחב שלך קובץ זה לא עולה לגיטאב
+REACT_APP_API_URL =https://localhost:7297   
+#// תשני לשם שבמחב שלך קובץ זה לא עולה לגיטאב
