--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "emailjs-com": "^3.2.0",
     "i18next": "^23.11.5",
     "npx": "^10.2.2",
     "react": "^18.3.1",
