--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
     "i18next": "^23.11.5",
+    "js-cookie": "^3.0.5",
     "npx": "^10.2.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
