--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "rxjs": "^7.8.1",
+    "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
