--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "i18next": "^23.11.5",
     "js-cookie": "^3.0.5",
     "npx": "^10.2.2",
+    "rc-slider": "^10.6.2",
+    "rc-tooltip": "^6.2.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
