--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start --max_old_space_size=4096",
+    "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build --max_old_space_size=4096",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
