--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "homepage": ".",
   "name": "front-project",
   "version": "0.1.0",
+    "homepage": "https://diversi-tech.github.io/malka-engel-front",
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
@@ -41,6 +41,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+     "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build --max_old_space_size=4096",
     "test": "react-scripts test",
