--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "set PORT=3006 && react-scripts start",
-    "build": "react-scripts build --max_old_space_size=4096",
+    "start": "react-scripts start",
+    "build": "react-scripts build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
