--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next": "^23.11.5",
     "js": "^0.1.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "npx": "^10.2.2",
     "rc-slider": "^10.6.2",
     "rc-tooltip": "^6.2.0",
