--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
-    "@emotion/react": "^11.11.4",
+    "@emotion/cache": "^11.13.0",
+    "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
