--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "cookie": "^0.6.0",
     "emailjs-com": "^3.2.0",
     "express": "^4.19.2",
+    "html2canvas": "^1.4.1",
     "i18next": "^23.11.5",
     "js": "^0.1.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "npx": "^10.2.2",
     "rc-slider": "^10.6.2",
