--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "rxjs": "^7.8.1",
+    "sharp": "^0.33.4",
     "source": "^0.0.3",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
